# ros_audition

./: BeamformerAnalysis.ipynb  CMakeLists.txt  LICENSE  README.md  Scratchpad.ipynb  TorchAudio tester.ipynb  feat_viz.ipynb  gmm_dev.ipynb  hololens.ipynb  package.xml  prompt.md  requirements.txt
config/: 16soundsUSB.conf  audition.n  audition_stream.n  c920_config.yaml  example.yaml  kinectHarkNetwork  kinectHarkNetwork.n  kinectMicrophones.xml  kinect_config.yaml  kinect_example.yaml  kinect_scene_example.yaml  lexicon.txt  mono_microphone.conf  mono_ros_test.conf  online.conf  philbart_audio.yaml  respeaker_config.yaml  rocog_lexicon_full_phrases.txt  soundsusb_config.yaml  usb_config.yaml
config/kinect/: microphones.xml  source.xml
launch/: 16soundsUSB.launch  array_calibration.launch  audio_acq.launch.py  audio_doa.launch.py  audition.launch  example.launch  kinect_example.launch  kinect_feat_ext.launch  kinect_scene_example.launch  philbart_speech_doa.launch.py
msg/: AudioAzSource.msg  AudioAzSources.msg  SpeechAzSource.msg  SpeechAzSources.msg
scripts/: HarkDataStreamReceiver.py  HarkTFreader.py  Kaldi.py  KaldiReceiver.py  audio_acq_node.py  audio_bf_node.py  audio_proc_node.py  calibration_node.py  convert_wav_to_feat.py  device_asr.py  doa_speech_rec_node.py  feature_extraction_node.py  hark.sh  hark_data_rcvr.sh  hark_kaldi_rcvr.sh  hark_stream.sh  kaldi.sh  levelmeter.py  params.sh  pra_node.py  scene_classifier.py  scene_voice_node.py  sendHarkParam.py  training_node.py  voice_classifier.py
srv/: ExtractFeatures.srv  RecordCalData.srv
(+42 files in other folders)
